Media queries added to fix issue with the select menu, and spacing tidy up around all elements

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,13 +39,12 @@ footer a:hover {
 
 nav {
     border-bottom: solid 2px #61892f;
-    margin: 0 250px;
+    margin: 0 120px;
 }
 
 footer {
     border-top: solid 2px #61892f;
-    margin: 0 250px;
-    padding-top: 20px;
+    margin: 0 120px;
 }
 
 /** Display label above input **/
@@ -66,6 +65,12 @@ label,
     text-transform: uppercase;
 }
 
+/** Reset button **/
+
+#reset-button {
+    padding: 8px 20px;
+}
+
 /** Styling for buttons **/
 
 .button {
@@ -78,7 +83,7 @@ label,
     background-color: #61892f;
 }
 
-.button:focus {
+.button:focus, #city-input:focus {
     outline: none;
 }
 
@@ -86,14 +91,91 @@ select {
     -webkit-border-radius: 0px;
     border-radius: 0px;
     -webkit-appearance: button;
+    -moz-appearance: button;
 
-    width: 30%;
+    width: 45%;
     padding: 5px 0 5px 10px;
     border: 0 !important;
 
-    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='100' height='50' fill='white'><polygon points='0,0 100,0 50,50'/></svg>") no-repeat;
-    background-size: 10px;
-    background-position: calc(100% - 5px) center;
+    background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' focusable='false' data-prefix='fas' data-icon='sort-down' class='svg-inline--fa fa-sort-down fa-w-10' role='img' viewBox='0 0 320 650'><path fill='white' d='M41 288h238c21.4 0 32.1 25.9 17 41L177 448c-9.4 9.4-24.6 9.4-33.9 0L24 329c-15.1-15.1-4.4-41 17-41z'/></svg>") no-repeat;
+    background-size: 15px;
+    background-position: calc(100% - 10px) center;
     background-repeat: no-repeat;
-    background-color: #efefef;
+
+}
+
+/** Margin between social media links **/
+
+.list-inline-item:not(:last-child) {
+    margin-right: 2rem;
+}
+
+/** Social media icons size increase **/
+
+.fa {
+    font-size: 20px;
+}
+
+
+/** MEDIA QUERIES **/
+
+/** Media queries to deal with select menu button and navbar / footer separator **/
+
+@media only screen and (max-width: 1200px) {
+
+    nav,
+    footer {
+        margin: 0 60px;
+    }
+
+    select {
+        width: 60%;
+    }
+
+}
+
+
+@media only screen and (max-width: 992px) {
+
+    select {
+        width: 80%;
+    }
+
+}
+
+@media only screen and (max-width: 750px) {
+
+    nav,
+    footer {
+        margin: 0 30px;
+    }
+
+    select {
+        width: 30%;
+    }
+
+}
+
+@media only screen and (max-width: 576px) {
+
+    select {
+        width: 40%;
+    }
+
+}
+
+@media only screen and (max-width: 425px) {
+
+    select {
+        width: 50%;
+    }
+
+}
+
+@media only screen and (max-width: 375px) {
+
+    select {
+        width: 60%;
+    }
+
 }
